# AstroNO

./: Makefile  render.yaml
docker/: Dockerfile  docker-compose.yml
docker/nginx/prod/: nginx.conf
src/: .env.example  pyproject.toml  wsgi-entrypoint.sh
src/core/: admin.py  forms.py  models.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_remove_event_end_after_start_event_end_after_start.py  0003_registration_status.py  0004_registration_student_whatsapp_number.py  0005_alter_registration_unique_together.py  0006_alter_registration_status.py
src/core/templates/: base.html  event-detail.html  event-list.html  success.html
src/src/: settings.py
src/staticfiles/assets/css/: style.css
